[package]
name = "client"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "fr8"
path = "src/main.rs"
[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
common = { path = "../common" }
proconio = "0.5.0"
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
