[package]
name = "client"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "fr8"
path = "src/main.rs"
[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
common = { path = "../common" }
confy = "0.6.1"
dialoguer = "0.11.0"
reqwest = { version = "0.12.12", features = ["json"] }
rpassword = "7.3.1"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.12.0", features = ["serde"] }
