[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tun = {version = "0.7.10",features = ["async"]}

tokio = { version = "1", features = ["full","io-util"] }
tokio-util = {version = "0.7.13", features = ["io-util"]}
tokio-stream = "0.1.17"

serde = "1.0"
serde_derive = "1.0.190"
serde_bytes = "0.11.15"
serde_cbor = "0.11"
bincode = "1.3"

log = "0.4.22"